added to the code

--- a/registration/registration.html
+++ b/registration/registration.html
@@ -7,7 +7,17 @@
 </head>
 
 <body>
-
+    ertyuiop[]
+    ';lkjhgfdsasdfghjkl;
+    ýtrdsdfghjkl;
+    ';lkjhgfghjkl;
+    ''hgfdsdfghujiol;
+    ';lkjhgfdfghjkl;
+    '';lkjhgfdfghjkl;
+    '';lkjhgfdfghjkl;
+    '';lkjhgfghjkl;
+    'lkjhgfdssertyuiop[
+    ]'
     <!-- the main body starts -->
     <div class="container">
 
